--- a/templates/NOVA/themes/clear/sass/_variables.scss
+++ b/templates/NOVA/themes/clear/sass/_variables.scss
@@ -168,6 +168,7 @@ $searchcloud-font-size-scaling:     30%;
 $navbar-light-color:                $gray-dark;
 
 $input-bg:                          #fff;
+$input-focus-border-color:          $primary;
 $input-focus-box-shadow:            none;
 $list-group-bg:                     #fff;
 $list-group-disabled-bg:            #fff;
